--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "core-js": "^3.8.1",
+    "css-loader": "^5.0.1",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "regenerator-runtime": "^0.13.5",
-    "sass-loader": "^9.0.2",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^2.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
