--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "regenerator-runtime": "^0.13.5",
     "sass-loader": "^9.0.3",
     "style-loader": "^2.0.0",
+    "svg-inline-loader": "^0.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
